--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -52,13 +52,13 @@ xtensa-lx            = { version = "0.9.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { version = "0.30.0", features = ["critical-section", "rt"], optional = true }
-esp32c2 = { version = "0.19.0", features = ["critical-section", "rt"], optional = true }
-esp32c3 = { version = "0.22.0", features = ["critical-section", "rt"], optional = true }
-esp32c6 = { version = "0.13.0", features = ["critical-section", "rt"], optional = true }
-esp32h2 = { version = "0.9.0",  features = ["critical-section", "rt"], optional = true }
-esp32s2 = { version = "0.21.0", features = ["critical-section", "rt"], optional = true }
-esp32s3 = { version = "0.25.0", features = ["critical-section", "rt"], optional = true }
+esp32   = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
+esp32c2 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
+esp32c3 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
+esp32c6 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
+esp32h2 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3",  features = ["critical-section", "rt"], optional = true }
+esp32s2 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
+esp32s3 = { git = "https://github.com/esp-rs/esp-pacs/", rev = "400b3b3", features = ["critical-section", "rt"], optional = true }
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
 esp-riscv-rt = { version = "0.8.0", path = "../esp-riscv-rt" }
