Add HIL test for `current_time`

--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -53,6 +53,10 @@ required-features = ["async", "embassy"]
 name    = "ecc"
 harness = false
 
+[[test]]
+name    = "get_time"
+harness = false
+
 [dependencies]
 cfg-if             = "1.0.0"
 critical-section   = "1.1.2"
