--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -30,8 +30,8 @@ jobs:
             rust-target: riscv32imc-unknown-none-elf
           - soc: esp32c6
             rust-target: riscv32imac-unknown-none-elf
-          - soc: esp32h2
-            rust-target: riscv32imac-unknown-none-elf
+          # - soc: esp32h2
+          #   rust-target: riscv32imac-unknown-none-elf
           # # Xtensa devices:
           - soc: esp32s2
             rust-target: xtensa-esp32s2-none-elf
@@ -101,8 +101,8 @@ jobs:
             runner: esp32c3-usb
           - soc: esp32c6
             runner: esp32c6-usb
-          - soc: esp32h2
-            runner: esp32h2-usb
+          # - soc: esp32h2
+          #   runner: esp32h2-usb
           # Xtensa devices:
           - soc: esp32s2
             runner: esp32s2-jtag
@@ -117,8 +117,6 @@ jobs:
       - name: Run Tests
         run: |
           export PATH=$PATH:/home/espressif/.cargo/bin
-          # Print the content in the 'tests' directory
-          ls -l test-suite
 
           failed_tests=() # Initialize an empty array to hold failed tests
           for test_file in "test-suite"/*; do
