--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -14,8 +14,10 @@ elliptic-curve      = { version = "0.13.8", default-features = false, features =
 # some examples use a huge amount of stack
 embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960"] }
 embassy-sync        = "0.5.0"
+embassy-futures     = "0.1.1"
 embassy-time        = "0.3.0"
 embassy-time-driver = { version = "0.1.0", optional = true }
+embassy-usb         = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", default-features = false, optional = true }
 embedded-graphics   = "0.8.1"
 embedded-hal        = "1.0.0"
 embedded-hal-02     = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
@@ -36,8 +38,8 @@ lis3dh-async        = "0.9.2"
 nb                  = "1.1.0"
 p192                = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
 p256                = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
-portable-atomic      = { version = "1.6.0", default-features = false }
-sha2                = { version = "0.10.8", default-features = false}
+portable-atomic     = { version = "1.6.0", default-features = false }
+sha2                = { version = "0.10.8", default-features = false }
 smart-leds          = "0.4.0"
 ssd1306             = "0.8.4"
 static_cell         = { version = "2.0.0", features = ["nightly"] }
@@ -54,7 +56,7 @@ esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "e
 esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2", "esp-hal-smartled/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3"]
 
-async = ["esp-hal/async"]
+async = ["esp-hal/async", "embassy-usb"]
 
 embedded-hal-02 = ["esp-hal/embedded-hal-02"]
 embedded-hal = ["esp-hal/embedded-hal"]
