ci: Remove the test folder

--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -137,3 +137,6 @@ jobs:
           else
             echo "All tests passed!"
           fi
+
+      - name: Cleanup
+        run: rm -rf tests-${{ matrix.target.soc }}
