--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -127,6 +127,9 @@ jobs:
             fi
           done
 
+          # Cleanup
+          rm -rf tests-${{ matrix.target.soc }}
+
           # Report all failed tests at the end
           if [ ${#failed_tests[@]} -gt 0 ]; then
             echo "The following tests failed:"
@@ -137,6 +140,3 @@ jobs:
           else
             echo "All tests passed!"
           fi
-
-      - name: Cleanup
-        run: rm -rf tests-${{ matrix.target.soc }}
