--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -20,6 +20,7 @@ bitfield                 = "0.15.0"
 cfg-if                   = "1.0.0"
 critical-section         = "1.1.2"
 defmt                    = { version = "0.3.6", optional = true }
+delegate                 = "0.12.0"
 document-features        = "0.2.8"
 embassy-executor         = { version = "0.5.0", optional = true }
 embassy-futures          = { version = "0.1.1", optional = true }
