--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -25,8 +25,8 @@ embassy-executor         = { version = "0.5.0", optional = true }
 embassy-futures          = { version = "0.1.1", optional = true }
 embassy-sync             = { version = "0.5.0", optional = true }
 embassy-time-driver      = { version = "0.1.0", optional = true }
-embassy-usb-driver       = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", optional = true }
-embassy-usb-synopsys-otg = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", optional = true }
+embassy-usb-driver       = { version = "0.1.0", optional = true }
+embassy-usb-synopsys-otg = { version = "0.1.0", optional = true }
 embedded-can             = { version = "0.4.1", optional = true }
 embedded-dma             = "0.2.0"
 embedded-hal-02          = { version = "0.2.7", optional = true, features = ["unproven"], package = "embedded-hal" }
