--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,7 +17,7 @@ embassy-sync        = "0.5.0"
 embassy-futures     = "0.1.1"
 embassy-time        = "0.3.0"
 embassy-time-driver = { version = "0.1.0", optional = true }
-embassy-usb         = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", default-features = false, optional = true }
+embassy-usb         = { version = "0.2.0", default-features = false, optional = true }
 embedded-graphics   = "0.8.1"
 embedded-hal        = "1.0.0"
 embedded-hal-02     = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
