--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -15,39 +15,41 @@ features       = ["embedded-hal", "esp32c6"]
 rustdoc-args   = ["--cfg", "docsrs"]
 
 [dependencies]
-bitflags             = "2.5.0"
-bitfield             = "0.15.0"
-cfg-if               = "1.0.0"
-critical-section     = "1.1.2"
-defmt                = { version = "0.3.6", optional = true }
-document-features    = "0.2.8"
-embassy-executor     = { version = "0.5.0", optional = true }
-embassy-futures      = { version = "0.1.1", optional = true }
-embassy-sync         = { version = "0.5.0", optional = true }
-embassy-time-driver  = { version = "0.1.0", optional = true }
-embedded-can         = { version = "0.4.1", optional = true }
-embedded-dma         = "0.2.0"
-embedded-hal-02      = { version = "0.2.7", optional = true, features = ["unproven"], package = "embedded-hal" }
-embedded-hal         = { version = "1.0.0", optional = true }
-embedded-hal-async   = { version = "1.0.0", optional = true }
-embedded-hal-nb      = { version = "1.0.0", optional = true }
-embedded-io          = { version = "0.6.1", optional = true }
-embedded-io-async    = { version = "0.6.1", optional = true }
-enumset              = "1.1.3"
-esp-synopsys-usb-otg = { version = "0.4.1", optional = true, features = ["fs", "esp32sx"] }
-fugit                = "0.3.7"
-log                  = { version = "0.4.21", optional = true }
-nb                   = "1.1.0"
-paste                = "1.0.14"
-portable-atomic      = { version = "1.6.0", default-features = false }
-procmacros           = { version = "0.10.0", features = ["enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
-riscv                = { version = "0.11.1", optional = true }
-strum                = { version = "0.26.2", default-features = false, features = ["derive"] }
-void                 = { version = "1.0.2", default-features = false }
-usb-device           = { version = "0.3.2", optional = true }
-rand_core            = "0.6.4"
-ufmt-write           = { version = "0.1.0", optional = true }
-xtensa-lx            = { version = "0.9.0", optional = true }
+bitflags                 = "2.5.0"
+bitfield                 = "0.15.0"
+cfg-if                   = "1.0.0"
+critical-section         = "1.1.2"
+defmt                    = { version = "0.3.6", optional = true }
+document-features        = "0.2.8"
+embassy-executor         = { version = "0.5.0", optional = true }
+embassy-futures          = { version = "0.1.1", optional = true }
+embassy-sync             = { version = "0.5.0", optional = true }
+embassy-time-driver      = { version = "0.1.0", optional = true }
+embassy-usb-driver       = { version = "0.1.0", optional = true }
+embassy-usb-synopsys-otg = { version = "0.1.0", optional = true }
+embedded-can             = { version = "0.4.1", optional = true }
+embedded-dma             = "0.2.0"
+embedded-hal-02          = { version = "0.2.7", optional = true, features = ["unproven"], package = "embedded-hal" }
+embedded-hal             = { version = "1.0.0", optional = true }
+embedded-hal-async       = { version = "1.0.0", optional = true }
+embedded-hal-nb          = { version = "1.0.0", optional = true }
+embedded-io              = { version = "0.6.1", optional = true }
+embedded-io-async        = { version = "0.6.1", optional = true }
+enumset                  = "1.1.3"
+esp-synopsys-usb-otg     = { version = "0.4.1", optional = true, features = ["fs", "esp32sx"] }
+fugit                    = "0.3.7"
+log                      = { version = "0.4.21", optional = true }
+nb                       = "1.1.0"
+paste                    = "1.0.14"
+portable-atomic          = { version = "1.6.0", default-features = false }
+procmacros               = { version = "0.10.0", features = ["enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+riscv                    = { version = "0.11.1", optional = true }
+strum                    = { version = "0.26.2", default-features = false, features = ["derive"] }
+void                     = { version = "1.0.2", default-features = false }
+usb-device               = { version = "0.3.2", optional = true }
+rand_core                = "0.6.4"
+ufmt-write               = { version = "0.1.0", optional = true }
+xtensa-lx                = { version = "0.9.0", optional = true }
 
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
@@ -128,13 +130,16 @@ rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fa
 #! ### Trait Implementation Feature Flags
 ## Enable support for asynchronous operation, with interfaces provided by
 ## `embedded-hal-async` and `embedded-io-async`.
+## Also enables `embassy-usb` support for ESP32-S2 and ESP32-S3.
 async = [
     "embedded-hal",
     "embedded-hal-async",
-    "embassy-sync",
-    "embassy-futures",
     "embedded-io",
     "embedded-io-async",
+    "embassy-sync",
+    "embassy-futures",
+    "embassy-usb-driver",
+    "embassy-usb-synopsys-otg"
 ]
 ## Implement `defmt::Format` on certain types.
 defmt = [
@@ -175,11 +180,11 @@ embassy-executor-thread = ["embassy", "embassy-executor"]
 ## by the time driver.
 embassy-integrated-timers = ["embassy-executor?/integrated-timers"]
 ## Enable the embassy time driver using the `SYSTIMER` peripheral. The
-## `SYSTIMER` peripheral has three alarams available for use. Do **not** 
+## `SYSTIMER` peripheral has three alarams available for use. Do **not**
 ## use when targeting an `esp32s2`.
 embassy-time-systick-16mhz = ["embassy-time-driver/tick-hz-16_000_000"]
 ## Enable the embassy time driver using the `SYSTIMER` peripheral. The
-## `SYSTIMER` peripheral has three alarams available for use. Must only 
+## `SYSTIMER` peripheral has three alarams available for use. Must only
 ## be used when targeting an `esp32s2`.
 embassy-time-systick-80mhz = ["embassy-time-driver/tick-hz-80_000_000"]
 ## Enable the embassy time driver using the `TIMG0` peripheral. The `TIMG0`
