--- a/esp-alloc/Cargo.toml
+++ b/esp-alloc/Cargo.toml
@@ -20,10 +20,12 @@ categories = [
 
 [package.metadata.docs.rs]
 default-target = "riscv32imc-unknown-none-elf"
+features       = ["nightly"]
 
 [dependencies]
 critical-section      = "1.1.1"
 linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs"] }
 
 [features]
+default = []
 nightly = []
