--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build-tests:
-    name: Build Tests | ${{ matrix.target.soc }}
+    name: HIL Test | ${{ matrix.target.soc }}
     runs-on: ubuntu-latest
 
     strategy:
