--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ exclude  = [
     "esp-hal",
     "esp-hal-procmacros",
     "esp-hal-smartled",
+    "esp-ieee802154",
     "esp-lp-hal",
     "esp-metadata",
     "esp-riscv-rt",
