Add the `esp-println` package to the repository

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ exclude  = [
     "esp-ieee802154",
     "esp-lp-hal",
     "esp-metadata",
+    "esp-println",
     "esp-riscv-rt",
     "examples",
     "hil-test",
