Add the `esp-backtrace` package to the repository

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members  = ["xtask"]
 exclude  = [
     "esp-alloc",
+    "esp-backtrace",
     "esp-build",
     "esp-hal",
     "esp-hal-procmacros",
