Add bench-server etc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ exclude  = [
     "esp-riscv-rt",
     "esp-wifi",
     "examples",
+    "extras/bench-server",
+    "extras/esp-wifishark",
     "hil-test",
 ]
