--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -21,6 +21,18 @@ name    = "crc"
 harness = false
 
 [[test]]
+name    = "delay"
+harness = false
+
+[[test]]
+name    = "ecc"
+harness = false
+
+[[test]]
+name    = "get_time"
+harness = false
+
+[[test]]
 name    = "gpio"
 harness = false
 
@@ -49,18 +61,6 @@ name              = "uart_async"
 harness           = false
 required-features = ["async", "embassy"]
 
-[[test]]
-name    = "ecc"
-harness = false
-
-[[test]]
-name    = "get_time"
-harness = false
-
-[[test]]
-name    = "delay"
-harness = false
-
 [dependencies]
 cfg-if             = "1.0.0"
 critical-section   = "1.1.2"
@@ -72,7 +72,7 @@ embedded-hal       = "1.0.0"
 embedded-hal-02    = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
-esp-backtrace      = { version = "0.11.1", git = "https://github.com/esp-rs/esp-backtrace", rev = "edff83c3945e8aa11081d8467af65803a82434ba", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
+esp-backtrace      = { version = "0.11.1", path = "../esp-backtrace", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
 portable-atomic = "1.6.0"
 
