Set env-vars used in esp-wifi examples

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
             esp-hal
       # Build all supported examples for the specified device:
       - name: Build (examples)
-        run: cargo xtask build-examples esp-hal ${{ matrix.device.soc }}
+        run: SSID=SSID; PASSWORD=PASSWORD; STATIC_IP=1.1.1.1; GATEWAY_IP=1.1.1.1; HOST_IP=1.1.1.1; cargo xtask build-examples esp-hal ${{ matrix.device.soc }}
       # Ensure we can build the documentation for the specified device:
       - name: Build (documentation)
         run: cargo xtask build-documentation esp-hal ${{ matrix.device.soc }}
