--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -53,6 +53,7 @@ atomic-waker = { version = "1.1.2", default-features = false, features = [
 
 [build-dependencies]
 toml-cfg = "0.2.0"
+esp-build = { version = "0.1.0", path = "../esp-build" }
 
 [features]
 default = ["log"]
