--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -82,6 +82,7 @@ embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
 esp-backtrace      = { path = "../esp-backtrace", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
+esp-hal-embassy    = { path = "../esp-hal-embassy", optional = true }
 portable-atomic    = "1.6.0"
 
 [dev-dependencies]
@@ -103,31 +104,34 @@ esp32 = [
     "embedded-test/xtensa-semihosting",
     "esp-backtrace/esp32",
     "esp-hal/esp32",
+    "esp-hal-embassy/esp32",
 ]
-esp32c2 = ["esp-backtrace/esp32c2", "esp-hal/esp32c2"]
-esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3"]
-esp32c6 = ["esp-backtrace/esp32c6", "esp-hal/esp32c6"]
-esp32h2 = ["esp-backtrace/esp32h2", "esp-hal/esp32h2"]
+esp32c2 = ["esp-backtrace/esp32c2", "esp-hal/esp32c2", "esp-hal-embassy/esp32c2"]
+esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3"]
+esp32c6 = ["esp-backtrace/esp32c6", "esp-hal/esp32c6", "esp-hal-embassy/esp32c6"]
+esp32h2 = ["esp-backtrace/esp32h2", "esp-hal/esp32h2", "esp-hal-embassy/esp32h2"]
 esp32s2 = [
     "embedded-test/xtensa-semihosting",
     "esp-backtrace/esp32s2",
     "esp-hal/esp32s2",
+    "esp-hal-embassy/esp32s2",
 ]
 esp32s3 = [
     "embedded-test/xtensa-semihosting",
     "esp-backtrace/esp32s3",
     "esp-hal/esp32s3",
+    "esp-hal-embassy/esp32s3",
 ]
 # Async & Embassy:
 async = ["dep:embedded-hal-async", "esp-hal?/async"]
 embassy = [
     "embedded-test/embassy",
     "embedded-test/external-executor",
-    "esp-hal?/embassy",
+    "dep:esp-hal-embassy",
 ]
-embassy-time-systick-16mhz = ["esp-hal?/embassy-time-systick-16mhz"]
-embassy-time-systick-80mhz = ["esp-hal?/embassy-time-systick-80mhz"]
-embassy-time-timg0 = ["esp-hal?/embassy-time-timg0"]
+embassy-time-systimer-16mhz = ["esp-hal-embassy/time-systimer-16mhz"]
+embassy-time-systimer-80mhz = ["esp-hal-embassy/time-systimer-80mhz"]
+embassy-time-timg0 = ["esp-hal-embassy/time-timg0"]
 
 # https://doc.rust-lang.org/cargo/reference/profiles.html#test
 # Test and bench profiles inherit from dev and release respectively.
