Add IEEE802.15.4 Wireshark Extcap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ exclude  = [
     "examples",
     "extras/bench-server",
     "extras/esp-wifishark",
+    "extras/ieee802154-sniffer",
     "hil-test",
 ]
