--- a/extras/ieee802154-sniffer/Cargo.toml
+++ b/extras/ieee802154-sniffer/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "esp-wifishark"
+name = "sniffer"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 r-extcap = "0.2.4"
 pcap-file = "2.0.0"
-serialport = "4.2.1"
-clap = { version = "4.3.5", features = ["derive"] }
+serialport = "4.2.0"
+clap = { version = "4.1.7", features = ["derive"] }
 lazy_static = "1.4.0"
